@@ -7,6 +7,10 @@ http://www.linuxfly.org/index.php
 
 https://www.jianshu.com/c/ce8cf0e13b23
 https://www.cnblogs.com/kevingrace/p/8495424.html
+
 https://www.centos.bz/2018/01/centos-7安装bbr教程/
 
 http://www.cnblogs.com/dalianmao890710/p/9241752.html 
+
+
+-Xms1024m -Xmx2024m -XX:PermSize=512m -XX:MaxPermSize=512m
